--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,11 +1,15 @@
 <ul>
-	<li><a href="/docker"><i class="fab fa-docker"></i> Docker</a></li>
+	<!-- corrigir endpoint para docker -->
+	<li><a href="#"><i class="fab fa-docker"></i> Docker</a></li>
 	<li>
-    <a href="/gitea"><i class="fab fa-git-square"></i> Gitea</a>
+		<!-- corrigir endpoints para gitea -->
+    <a href="#"><i class="fab fa-git-square"></i> Gitea</a>
     <menu>
-      <menuitem><a href="/gitea/usuario"><i class="fas fa-user-plus"></i> Adicionar Usuário</a></menuitem>
+      <menuitem><a href="#"><i class="fas fa-user-plus"></i> Adicionar Usuário</a></menuitem>
     </menu>
   </li>
-	<li><a href="/jenkins"><i class="fab fa-jenkins"></i> Jenkins</a></li>
-	<li><a href="/logoff"><i class="fas fa-door-open"></i> Logout</a></li>
+	<!-- corrigir endpoint para jenkins -->
+	<li><a href="#"><i class="fab fa-jenkins"></i> Jenkins</a></li>
+	<!-- corrigir endpoint para deslogar -->
+	<li><a href="#"><i class="fas fa-door-open"></i> Logout</a></li>
 </ul>
